# cvxball

./: .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .rhiza.env  .rhiza.history  CHANGELOG.md  CLAUDE.md  Makefile  README.md  cloudbuild.yaml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  renovate.json  template.yml
.github/rhiza/: template.yml
.github/workflows/: book.yml  ci.yml  copilot-setup-steps.yml  pre-commit.yml  release.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_book.yml.rej  rhiza_ci.yml  rhiza_ci.yml.rej  rhiza_codeql.yml  rhiza_codeql.yml.rej  rhiza_marimo.yml  rhiza_marimo.yml.rej  rhiza_release.yml  rhiza_release.yml.rej  rhiza_sync.yml  rhiza_validate.yml  rhiza_weekly.yml.rej
.rhiza/: history  template.yml
.rhiza/tests/: conftest.py
.rhiza/tests/api/: conftest.py
.rhiza/tests/sync/: conftest.py
age/: dependency-age-sorted.txt  dependency-age.txt
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md
book/docs/: api.html  index.html  marimo.html  reports.html
book/marimo/: soc.py
book/marimo/notebooks/: soc.py
docs/: api.md
experiments/: __init__.py  alter1.py  alter2.py  asymptotic.py  experiment_clarabel.py  experiment_mosek.py  pi.py  speed.py
marimo/: soc.html
pdoc/: cvx.html  search.js
pdoc/cvx/: ball.html
pdoc/cvx/ball/: pi.html  server.html  solver.html  utils.html
pdoc/cvx/ball/utils/: convert.html
src/cvx/ball/: __init__.py  numpy_server.py  pi.py  scratch  server.py  solver.py
src/cvx/ball/utils/: convert.py
src/cvxball/: __init__.py  server.py  solver.py
src/cvxball/utils/: circle.py
src/example/: client.py
src/tests/: test_ballserver.py  test_mini.py  test_server.py  test_solver.py
src/tests/utils/: reader.py
tests/: test_ballserver.py  test_mini.py  test_solver.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_7466169469dc68f1___init___py.html  z_7466169469dc68f1_pi_py.html  z_7466169469dc68f1_server_py.html  z_7466169469dc68f1_solver_py.html  z_8a0b1d042ff6c9b1___init___py.html  z_8a0b1d042ff6c9b1_convert_py.html
tests/html-report/: report.html
