[project]
name = 'cvxball'
version = "1.0.0"
description = "Fast computation of the smallest enclosing sphere"
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "cvxpy-base>=1.8.2",
    "clarabel>=0.11.1",
    "numpy>=2.4.4",
]

[project.urls]
repository = "https://github.com/cvxgrp/cvxball"

[dependency-groups]
dev = [
    "kaleido==1.3.0",
    "mosek==11.1.11",
    "plotly>=6.7.0",
    "marimo>=0.23.5",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxball"]

[tool.mypy]
ignore_missing_imports = true

[tool.deptry]
package_module_name_map = { cvxpy = "cvxpy-base" }

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel", "cvxpy-base"]
DEP001 = ["cvxpy"]
