[project]
name = 'cvxball'
version = "1.0.0"
description = "Fast computation of the smallest enclosing sphere"
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "cvxpy-base>=1.9.0",
    "clarabel>=0.11.1",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[project.urls]
repository = "https://github.com/cvxgrp/cvxball"

[dependency-groups]
dev = [
    "kaleido==1.3.0",
    "mosek==11.2.0",
    "plotly>=6.7.0",
    "marimo>=0.23.8",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxball"]

[tool.deptry]
package_module_name_map = { "cvxpy-base" = "cvxpy", clarabel = "clarabel", numpy = "numpy", scipy = "scipy", kaleido = "kaleido", mosek = "mosek", plotly = "plotly", marimo = "marimo", matplotlib = "matplotlib", pandas = "pandas" }

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel", "cvxpy-base"]
DEP001 = ["cvxpy"]
