[project]
name = 'cvxball'
version = "1.0.2"
description = "Fast computation of the smallest enclosing sphere"
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "cvxpy-base>=1.9.2",
    "clarabel>=0.11.1",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/cvxgrp/cvxball"
Repository = "https://github.com/cvxgrp/cvxball"

[dependency-groups]
dev = [
    "kaleido==1.3.0",
    "mosek==11.2.2",
    "plotly>=6.8.0",
    "marimo>=0.23.11",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3"
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.155.7",
]
lint = [
    "ruff>=0.15.20",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxball"]

[tool.deptry]
package_module_name_map = { "cvxpy-base" = "cvxpy", clarabel = "clarabel", numpy = "numpy", scipy = "scipy", kaleido = "kaleido", mosek = "mosek", plotly = "plotly", marimo = "marimo", matplotlib = "matplotlib", pandas = "pandas" }

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel", "cvxpy-base"]
DEP001 = ["cvxpy"]

# clarabel and scipy ship without type information (no py.typed marker / stubs);
# strict mypy would otherwise flag every import of them as import-untyped.
[[tool.mypy.overrides]]
module = ["clarabel.*", "scipy.*"]
ignore_missing_imports = true
